internal/adapters/cilium/testdata/clusterwide.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-external
  uid: test-uid-5
spec:
  endpointSelector: {}
  egressDeny:
    - toEntities:
        - world
