internal/adapters/cilium/testdata/deny_all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: isolated
  uid: test-uid-7
spec:
  endpointSelector:
    matchLabels:
      app: secure-app
