internal/adapters/cilium/testdata/egress_fqdn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-external-api
  namespace: production
  uid: test-uid-2
spec:
  endpointSelector:
    matchLabels:
      app: api-client
  egress:
    - toFQDNs:
        - matchName: "api.example.com"
        - matchPattern: "*.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
